<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    tools:context=".create_course">

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:background="@drawable/page_background"
        android:layout_height="match_parent"
        android:id="@+id/draw_layout"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/design_default_color_primary"
                    android:id="@+id/toolbar"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:popupTheme="@style/Theme.AppCompat.Light"
                    android:elevation="4dp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/frame_layout"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:text="Course Name" />

                    <EditText
                        android:id="@+id/course_name"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_below="@+id/name"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_shape"
                        android:ems="10"
                        android:hint="Enter course name"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp" />

                    <TextView
                        android:id="@+id/code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/course_name"
                        android:layout_alignStart="@+id/name"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:text="Course Code"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/course_code"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_below="@+id/code"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_shape"
                        android:ems="10"
                        android:hint="Enter course code"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp" />

                    <TextView
                        android:id="@+id/school"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/course_code"
                        android:layout_alignStart="@+id/code"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:text="School"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/course_school"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_below="@+id/school"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_shape"
                        android:ems="10"
                        android:hint="Enter school name"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp" />

                    <TextView
                        android:id="@+id/faculty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/course_school"
                        android:layout_alignStart="@+id/school"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:text="Faculty"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/course_faculty"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_below="@+id/faculty"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_shape"
                        android:ems="10"
                        android:hint="Enter faculty name"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp" />

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/course_faculty"
                        android:layout_alignStart="@+id/faculty"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:text="Year of Study"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <Spinner
                        android:id="@+id/year_of_study"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_below="@+id/year"
                        android:layout_marginTop="10dp"
                        android:popupBackground="@drawable/pop_background" />

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/year_of_study"
                        android:layout_alignStart="@+id/year"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:text="Password"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/course_password"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_below="@+id/password"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_shape"
                        android:ems="10"
                        android:hint="Enter password"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp" />

                    <TextView
                        android:id="@+id/create_button"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_below="@+id/confirm_c_password"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="80dp"
                        android:onClick="create"
                        android:layout_marginBottom="33dp"
                        android:background="@drawable/button_background"
                        android:gravity="center"
                        android:text="Create"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/course_password"
                        android:layout_alignStart="@+id/password"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:text="Confirm Password"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/confirm_c_password"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_below="@+id/confirm"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/input_shape"
                        android:ems="10"
                        android:hint="Enter password"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginLeft="10dp"
            android:layout_gravity="start"
            android:id="@+id/nav"
            app:headerLayout="@layout/navigator"
            app:menu="@menu/teacher_toolbox"/>

    </androidx.drawerlayout.widget.DrawerLayout>

</RelativeLayout>