<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/profile"
        android:title="View/Edit Profile"
        app:showAsAction="never"/>

    <item android:id="@+id/create"
        android:title="Create a new Course"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_page"
        android:title="Back to Menu"
        app:showAsAction="never"/>

    <item android:id="@+id/logout"
        android:title="Logout"
        app:showAsAction="never"/>

</menu>